@@ -14,10 +14,10 @@ import org.stepik.api.objects.submissions.Submission;
 import org.stepik.api.objects.submissions.Submissions;
 import org.stepik.core.StepikProjectManager;
 import org.stepik.core.courseFormat.StepNode;
+import org.stepik.core.courseFormat.StepType;
 import org.stepik.core.courseFormat.StudyStatus;
 import org.stepik.core.metrics.Metrics;
 import org.stepik.core.metrics.MetricsStatus;
-import org.stepik.core.stepik.StepikConnectorLogin;
 import org.stepik.core.utils.Utils;
 
 import static org.stepik.core.courseFormat.StudyStatus.SOLVED;
@@ -36,12 +36,12 @@ public class SendAction {
 
     public static void checkStepStatus(
             @NotNull Project project,
+            @NotNull StepikApiClient stepikApiClient,
             @NotNull StepNode stepNode,
             final long submissionId,
             @NotNull ProgressIndicator indicator) {
         String stepIdString = "id=" + stepNode.getId();
         logger.info("Started check a status for step: " + stepIdString);
-        StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
         String stepStatus = EVALUATION;
         int timer = 0;
         String hint;
@@ -56,7 +56,7 @@ public class SendAction {
                         .execute();
 
                 if (!submission.isEmpty()) {
-                    currentSubmission = submission.getSubmissions().get(0);
+                    currentSubmission = submission.getFirst();
                     ActionUtils.setupCheckProgress(indicator, currentSubmission, timer);
                     stepStatus = currentSubmission.getStatus();
                     if (!EVALUATION.equals(stepStatus)) {
@@ -86,7 +86,9 @@ public class SendAction {
         indicator.setIndeterminate(true);
         indicator.setText("");
         hint = currentSubmission.getHint();
-        notify(project, stepNode, stepStatus, hint);
+        if (stepNode.getType() == StepType.CODE) {
+            notify(project, stepNode, stepStatus, hint);
+        }
         ApplicationManager.getApplication().invokeLater(() -> {
             if (!project.isDisposed()) {
                 ProjectView.getInstance(project).refresh();
