@@ -14,11 +14,11 @@ import org.stepik.api.objects.sections.Section;
 import org.stepik.api.objects.sections.Sections;
 import org.stepik.api.objects.units.Unit;
 import org.stepik.api.objects.units.Units;
-import org.stepik.core.stepik.StepikConnectorLogin;
 
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
+import static org.stepik.core.stepik.StepikAuthManager.authAndGetStepikApiClient;
 import static org.stepik.plugin.projectWizard.StepikProjectGenerator.EMPTY_STUDY_OBJECT;
 
 /**
@@ -88,7 +88,7 @@ public class Utils {
         Unit unit = unitLesson.getUnit();
 
         if (unit.getId() != 0) {
-            StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
+            StepikApiClient stepikApiClient = authAndGetStepikApiClient();
             Section section = getSectionStudyObject(unit.getSection(), stepikApiClient);
 
             if (section != null) {
@@ -101,7 +101,7 @@ public class Utils {
 
     @NotNull
     private static CompoundUnitLesson getCompoundUnitLessonStudyObject(long lessonId, long unitId) {
-        StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
+        StepikApiClient stepikApiClient = authAndGetStepikApiClient();
 
         Units units = null;
 
@@ -115,7 +115,7 @@ public class Utils {
         Unit unit = null;
 
         if (unitId != 0 && !units.isEmpty()) {
-            unit = units.getItems().get(0);
+            unit = units.getFirst();
         }
 
         Lesson lesson = getLesson(lessonId, stepikApiClient);
@@ -136,7 +136,7 @@ public class Utils {
         Section section = null;
 
         if (sectionId != 0 && !sections.isEmpty()) {
-            section = sections.getItems().get(0);
+            section = sections.getFirst();
         }
         return section;
     }
@@ -155,14 +155,14 @@ public class Utils {
         Lesson lesson = null;
 
         if (lessonId != 0 && !lessons.isEmpty()) {
-            lesson = lessons.getItems().get(0);
+            lesson = lessons.getFirst();
         }
         return lesson;
     }
 
     @NotNull
     private static StudyObject getCourseStudyObject(long id) {
-        StepikApiClient stepikApiClient = StepikConnectorLogin.authAndGetStepikApiClient();
+        StepikApiClient stepikApiClient = authAndGetStepikApiClient();
         Course course = getCourse(id, stepikApiClient);
         return course != null ? course : EMPTY_STUDY_OBJECT;
     }
@@ -181,7 +181,7 @@ public class Utils {
         Course course = null;
 
         if (id != 0 && !courses.isEmpty()) {
-            course = courses.getCourses().get(0);
+            course = courses.getFirst();
         }
         return course;
     }
